force-app/main/default/objects/Campaign_Member_Lead_Tier_Automation__c/Campaign_Member_Lead_Tier_Automation__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Campaign Member Lead Tier Automation</label>
</CustomObject>