force-app/main/default/objects/Campaign_Member_Lead_Tier_Automation__c/fields/Campaign_Member_Status__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Status__c</fullName>
    <label>Campaign Member Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>