force-app/main/default/objects/Campaign_Member_Lead_Tier_Automation__c/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
    <label>Campaign Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>