force-app/main/default/objects/Campaign_Member_Lead_Tier_Automation__c/fields/Lead_Tier__c.field-meta.xml
<CustomField>
    <fullName>Lead_Tier__c</fullName>
    <label>Lead Tier</label>
    <length>10</length>
    <type>Text</type>
</CustomField>